--- a/sign-detection/package.json
+++ b/sign-detection/package.json
@@ -11,6 +11,7 @@
     "format": "npx rome format . --write"
   },
   "dependencies": {
+    "@react-hook/resize-observer": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-webcam": "^7.0.1"
