--- a/sign-detection/frontend/package.json
+++ b/sign-detection/frontend/package.json
@@ -26,6 +26,7 @@
     "rome": "^11.0.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-static-copy": "^0.13.1"
   }
 }
