--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -60,7 +60,7 @@ jobs:
         with:
           context: docker
           # file: docker/emscripten-opencv.dockerfile
-          file: docker/tmp.dockerfile
+          file: docker/emscripten-opencv.dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -90,7 +90,7 @@ jobs:
         run: deno cache ./package-as-npm.ts ./src/ts/deps.ts
         working-directory: lib/
       - name: Build library
-        run: ./build.sh
+        run: ./build.sh ${{ github.ref_name }}
         working-directory: lib/
 
       - name: Install frontend deps
