--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview --port 3000 --host",
     "lint": "npx rome check .",
-    "format": "npx rome format . --write"
+    "format": "npx rome format . --write && npx rome check . --apply-suggested"
   },
   "dependencies": {
     "@react-hook/resize-observer": "^1.2.6",
